feat: slide change + sessio storage + images + bg colors

--- a/src/lib/slideshow.css
+++ b/src/lib/slideshow.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slideshow__image--in-background {
+  z-index: 0;
+}
+
+.slideshow__image--in-background ~ * {
+  z-index: 1;
+}
